kubernetes/deployment-v1.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v1-deployment
  namespace: product-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-v1
  template:
    metadata:
      labels:
        app: product-v1
    spec:
      containers:
      - name: product-v1
        image: advaith65/product-catalogue:v1.0.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
